# analysis-french

./: Cargo.toml  README.md
src/: elision.rs  lib.rs  register.rs  stem.rs  stop.rs
tests/: french_comprehensive.rs
