[package]
name = "pizza-analysis-french"
version = "0.1.0"
authors = ["INFINI Labs <hello@infini.ltd>"]
edition = "2021"
license = "MIT"
description = "French language analysis for INFINI Pizza"
repository = "https://pizza.rs"
keywords = ["pizza", "french", "stemmer", "elision", "nlp"]

[features]
default = []
std = ["pizza-engine/std"]

[dependencies]
pizza-engine = { path = "../../lib/engine", default-features = false }
hashbrown = { version = "0.14", default-features = false }
once_cell = { version = "1", default-features = false, features = ["alloc"] }

[workspace]

[dev-dependencies]
